// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Require makeRequired extracts the required fields 1`] = `
{
  "string": false,
  "stringNot": false,
  "stringNotDeclared": false,
}
`;

exports[`Require makeRequired extracts the required fields when deeply nested 1`] = `
{
  "deep": {
    "deeper": {
      "num": false,
    },
    "string": false,
    "stringNot": false,
    "stringNotDeclared": false,
  },
  "string": false,
  "stringNot": false,
  "stringNotDeclared": false,
}
`;
